<resources>
    <string name="app_name">App</string>
    <string name="coffee_maker">Coffee maker</string>
    <string name="customization">Customization</string>
    <string name="milk_choose">Milk Choose</string>
    <string name="milk_name">milk choose</string>
    <string name="sugar_choose">Sugar Choose</string>
    <string name="sugar_name">sugar choose</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="pluse">+</string>
    <string name="total">Total</string>
    <string name="make">make tea</string>
    <string name="_0">0</string>
</resources>